--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
 <body>
 
+        <button onclick="pou();">Tiro</button>
+
+
     <div class="right">
+	
         <h1>N3rdyDzn</h1>
     </div>
 
@@ -21,17 +25,21 @@
         <img src="./img/health.png" width="25">
         <div class="healthbar">
             <div class="progress">
-                <div class="progress-bar bg-danger h-30" role="progressbar" aria-label="Health Bar" style="width: 100%; height: 500px;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="barvida" class="progress-bar bg-danger h-30" role="progressbar" aria-label="Health Bar" style="width: 100%; height: 500px;" aria-valuenow="1000" aria-valuemin="0" aria-valuemax="1000"></div>
             </div>
         </div>
         <br>
+
         <img src="./img/armor.png" width="25">
         <div class="armorbar">
             <div class="progress">
-                <div class="progress-bar h-30" role="progressbar" aria-label="Armor Bar" style="width: 75%; height: 500px;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="barcolete" class="progress-bar h-30" role="progressbar" aria-label="Armor Bar" style="width: 100%; height: 500px;" aria-valuenow="1000" aria-valuemin="0" aria-valuemax="1000"></div>
             </div>
         </div>
     </div>
+
+    <script src="./main.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
